[package]
name = "slowsort"
version = "0.1.0"
edition = "2021"
license = "MIT OR APACHE-2.0"
description = "slowsort implementation in Rust"
repository = "https://github.com/jakobrs/slowsort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
